# comprocard-scraping

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt
docs/: sodexo-example-response.json.json
scripts/: create-report.py  create-report.sh  git-push.sh  install.sh  lint-one.sh  lint.sh  setup.sh  start-worker.sh
src/app/: scrape.py
src/app/scrape/: __init__.py  core.py  engines.py  types.py
src/comprocard_scraping/: __main__.py  schemas.py  scrape.py  types.py
tools/: report2csv.py
