[tool.poetry]
name = "comprocard-scraping"
version = "0.1.0"
description = ""
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
marshmallow = "^3.20.2"
pandas = "^2.2.0"
streamlit = "^1.31.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
